--- a/ToDoList.WebApi/ToDoList.WebApi/appsettings.json
+++ b/ToDoList.WebApi/ToDoList.WebApi/appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "Default": "Server=DESKTOP-K74FN9P\\SQLEXPRESS;Database=ToDoList;Integrated Security=true;Encrypt=false;"
+        "Default": "Server=DESKTOP-K74FN9P\\SQLEXPRESS;Database=Quiz;Integrated Security=true;Encrypt=false;"
+
     }
 }
